--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,12 @@ gunicorn==18.0
 itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
+oauthlib==0.7.2
 pep8==1.5.7
+python-twitter==2.2
 pytz==2014.10
+requests==2.5.1
+requests-oauthlib==0.4.2
 speaklater==1.3
 webassets==0.9
 webassets-iife==0.1.0
