--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Babel==1.3
 closure==20121212
 coverage==3.7.1
 cssmin==0.2.0
+elasticsearch==1.3.0
 Flask==0.10.1
 Flask-Assets==0.9
 Flask-Babel==0.9
@@ -11,11 +12,15 @@ Jinja2==2.7.3
 MarkupSafe==0.23
 oauthlib==0.7.2
 pep8==1.5.7
+pyelasticsearch==1.0
 python-twitter==2.2
 pytz==2014.10
 requests==2.5.1
 requests-oauthlib==0.4.2
+simplejson==3.6.5
+six==1.9.0
 speaklater==1.3
+urllib3==1.10
 webassets==0.9
 webassets-iife==0.1.0
 Werkzeug==0.9.6
