--- a/requirements.txt
+++ b/requirements.txt
@@ -13,13 +13,13 @@ MarkupSafe==0.23
 oauthlib==0.7.2
 pep8==1.5.7
 pyelasticsearch==1.0
-python-twitter==2.2
 pytz==2014.10
-requests==2.5.1
-requests-oauthlib==0.4.2
+requests==2.4.3
+requests-oauthlib==0.4.1
 simplejson==3.6.5
-six==1.9.0
+six==1.7.3
 speaklater==1.3
+tweepy==3.2.0
 urllib3==1.10
 webassets==0.9
 webassets-iife==0.1.0
