--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 Babel==1.3
-closure==20121212
 coverage==3.7.1
 cssmin==0.2.0
 elasticsearch==1.3.0
@@ -11,8 +10,8 @@ itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
 oauthlib==0.7.2
+peewee==2.4.7
 pep8==1.5.7
-pyelasticsearch==1.0
 pytz==2014.10
 requests==2.4.3
 requests-oauthlib==0.4.1
