--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ coverage==3.7.1
 cssmin==0.2.0
 elasticsearch==1.3.0
 Flask==0.10.1
+Flask-Admin==1.0.9
 Flask-Assets==0.9
 Flask-Babel==0.9
 gunicorn==18.0
@@ -23,3 +24,5 @@ urllib3==1.10
 webassets==0.9
 webassets-iife==0.1.0
 Werkzeug==0.9.6
+git+https://github.com/bfontaine/wtf-peewee.git@patch-1
+WTForms==2.0.2
