--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,6 @@ teebr.js
 teebr.css
 app.css
 # Tex
-*.log
 *.out
 *.aux
 *.bbl
@@ -36,3 +35,7 @@ app.css
 
 # Data
 /datasets
+
+# Logs
+*.log
+*.log.*
