--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ gunicorn==18.0
 itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
+nltk==3.0.1
+numpy==1.9.1
 oauthlib==0.7.2
 peewee==2.4.7
 pep8==1.5.7
@@ -19,13 +21,12 @@ requests-oauthlib==0.4.1
 simplejson==3.6.5
 six==1.7.3
 speaklater==1.3
+textblob==0.9.0
 tweepy==3.2.0
+Unidecode==0.4.17
 urllib3==1.10
 webassets==0.9
 webassets-iife==0.1.0
 Werkzeug==0.9.6
-git+https://github.com/bfontaine/wtf-peewee.git
+git+https://github.com/coleifer/wtf-peewee.git
 WTForms==2.0.2
-unidecode
-nltk
-numpy
