starting the report

--- a/report/Makefile
+++ b/report/Makefile
@@ -6,3 +6,6 @@ SOURCES=$(wildcard *.tex) $(wildcard *.bib)
 
 $(TARGET): $(SOURCES)
 	./compile.sh
+
+clean:
+	$(RM) *~ *.out *.aux *.bbl *.blg *.toc *.log
