--- a/requirements.txt
+++ b/requirements.txt
@@ -31,4 +31,5 @@ webassets==0.9
 webassets-iife==0.1.0
 Werkzeug==0.9.6
 git+https://github.com/coleifer/wtf-peewee.git
+git+https://github.com/bfontaine/pybayesantispam.git
 WTForms==2.0.2
