*.py gettext strings

--- a/babel.cfg
+++ b/babel.cfg
@@ -1,3 +1,4 @@
-[python: *.py,teeber/**/*.py]
+[python: app.py]
+[python: teebr/**.py]
 [jinja2: templates/**.html]
 extensions=jinja2.ext.autoescape,jinja2.ext.with_
